updates(footer): removed pages with no content and fixed alignment.

--- a/components/footer/footer-desktop/footer-desktop.sass
+++ b/components/footer/footer-desktop/footer-desktop.sass
@@ -93,6 +93,8 @@
         @include focus($color: $white)
 
   &__links
+    display: flex
+    justify-content: flex-end
     margin-top: rem-calc(90)
 
   &__link
